--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
